# do-android-wolves-dream-of-electric-sheep

./: .cursorignore  .env.local.example  .gitignore  .python-version  README.md  agents.py  domain.py  main.py  model.py  presets.json  pyproject.toml  run_experiment.py  run_multi.py  run_multi_experiment.py  run_preset.py  run_sheep_experiment.py  simulation_utils.py  sweeps.sh  utils.py  workflow.md
app/: app.py
app/pages/: home.py  lotka_volterra.py  lotka_volterra_star_stability.py  lv_star_plus_theta.py  lv_star_with_adaptive_theta.py  lv_star_with_theta.py
app/utils/: lv_core.py
data/keepers/KEEP_ME_1918171615sheep_5f/: experiment_config_20250302_181124.json
data/keepers/churn500b/gpt-4o-mini_500_15-10_high_20250302_205207/: summary.md
data/keepers/churn500b/gpt-4o-mini_500_15-10_high_20250302_205841/: summary.md
data/keepers/churn500b/gpt-4o-mini_500_15-10_high_20250302_213408/: summary.md
data/keepers/churn500b/gpt-4o-mini_500_15-10_high_20250302_221818/: summary.md
data/keepers/claude-3-5-haiku_2_14-10_low_20250304_141938/: summary.md
data/keepers/gpt-4o-mini-prompt-sweep-s0/: experiment_summary_20250317_044313.json
data/keepers/gpt-4o-mini-prompt-sweep-s0-smax110/: experiment_summary_20250307_065036.json
data/keepers/k-dt-sweep/: experiment_summary_20250306_120041.json
data/keepers/k-sheep-max-sweep/: experiment_summary_20250317_160211.json
model/: agents.py  domain.py  model.py  simulation_utils.py  utils.py
model/llms/: claude.py
model/utils/: data_types.py  init_utils.py  llm_utils.py  simulation_utils.py  utils.py  validation_utils.py
model/utils/llms/: claude.py  gpt_4o_mini.py
notebooks/: agent-wolf.ipynb  call_model.ipynb  debugging.ipynb  file_got_too_pretty_for_scratch.ipynb  introducing_do_androids_dream.ipynb  introducing_do_androids_dream.py  methods.ipynb  project-summary.ipynb  scratch.ipynb  start-here.ipynb  sweeps.ipynb  validation.ipynb
notebooks/notebook_results/: Model_10_100-10_20250225_123342.md  Model_2_100-10_20250225_103905.md
notebooks/notebook_results/detailed_results/: census.csv  wolf_0.json  wolf_1.json  wolf_10.json  wolf_2.json  wolf_3.json  wolf_4.json  wolf_5.json  wolf_6.json  wolf_7.json  wolf_8.json  wolf_9.json
tests/: test_utils.py
workflow/: workflow.md
(+33166 files in other folders)
